add create mint record api
